sol: add problem link

--- a/notes/solutions/p4180.md
+++ b/notes/solutions/p4180.md
@@ -1,5 +1,7 @@
 # [BJWC2010]严格次小生成树 题解
 
+[题目传送门](https://www.luogu.com.cn/problem/P4180)
+
 冷兵器解法。无倍增，无树剖，无 LCT。
 
 很遗憾，复杂度瓶颈在求最小生成树，仍为 $\Theta(m\lg m)$。
